# wsWigdets_project

./: CMakeLists.txt  Malpka.cpp  Malpka.h  MalpkaMyFrame.cpp  MalpkaMyFrame.h  dimka  kris  main.cpp  test  wxMalpka.fbp
